--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.xjiangwei.RobotHelper">
+    package="com.slvrmn.DnfAssistant">
 
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" /> <!-- android 9.0上使用前台服务，需要添加权限 -->
@@ -11,7 +11,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
 
     <application
-        android:name=".MainApplication"
+        android:name="com.slvrmn.DnfAssistant.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -20,7 +20,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
         <service
-            android:name=".Service.Accessibility"
+            android:name="com.slvrmn.DnfAssistant.Service.Accessibility"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
@@ -31,21 +31,8 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-        <service
-            android:name=".Service.Controller"
-            android:enabled="true"
-            android:exported="false" /> <!-- 是否是xposed模块，xposed根据这个来判断是否是模块 -->
-        <meta-data
-            android:name="xposedmodule"
-            android:value="true" /> <!-- 模块描述，显示在xposed模块列表那里第二行 -->
-        <meta-data
-            android:name="xposeddescription"
-            android:value="点击权限拦截" /> <!-- 最低xposed版本号(lib文件名可知) -->
-        <meta-data
-            android:name="xposedminversion"
-            android:value="30" />
 
-        <activity android:name=".MainActivity">
+        <activity android:name="com.slvrmn.DnfAssistant.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
