--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId 'com.noxen.FarmKing'
+        applicationId 'com.slvrmn.DNFAssistant'
         minSdkVersion 24
         targetSdkVersion 24
         versionCode 1
