--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.noxen.FarmKing">
+    package="com.slvrmn.DNFAssistant">
 
     <uses-permission android:name="android.permission.EXPAND_STATUS_BAR" /> <!-- android 9.0上使用前台服务，需要添加权限 -->
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
@@ -12,7 +12,7 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
-        android:name="com.noxen.FarmKing.MainApplication"
+        android:name="com.slvrmn.DNFAssistant.MainApplication"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -21,7 +21,7 @@
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
 
-        <activity android:name="com.noxen.FarmKing.MainActivity">
+        <activity android:name="com.slvrmn.DNFAssistant.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
@@ -29,7 +29,7 @@
         </activity>
 
         <service
-            android:name="com.noxen.FarmKing.Service.Accessibility"
+            android:name="com.slvrmn.DNFAssistant.Service.Accessibility"
             android:enabled="true"
             android:exported="true"
             android:permission="android.permission.BIND_ACCESSIBILITY_SERVICE">
@@ -40,7 +40,7 @@
                 android:name="android.accessibilityservice"
                 android:resource="@xml/accessibility_service_config" />
         </service>
-        <service android:name="com.noxen.FarmKing.Service.FloatingViewService"></service>
+        <service android:name="com.slvrmn.DNFAssistant.Service.FloatingViewService"></service>
 
         <provider
             android:name="android.support.v4.content.FileProvider"
